--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "[5 rows x 67 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -284,6 +284,9 @@
        "      <th>icu_patients_per_million</th>\n",
        "      <th>new_deaths_smoothed</th>\n",
        "      <th>new_vaccinations_smoothed</th>\n",
+       "      <th>people_fully_vaccinated_per_hundred</th>\n",
+       "      <th>total_boosters_per_hundred</th>\n",
+       "      <th>new_people_vaccinated_smoothed_per_hundred</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -292,6 +295,9 @@
        "      <td>2020-02-24</td>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>Asia</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -308,12 +314,18 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2020-02-26</td>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>Asia</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -330,12 +342,18 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2020-02-28</td>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>Asia</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -354,45 +372,62 @@
        "3  2020-02-27  Afghanistan      Asia                 NaN           NaN   \n",
        "4  2020-02-28  Afghanistan      Asia                 NaN           NaN   \n",
        "\n",
-       "   icu_patients_per_million  new_deaths_smoothed  new_vaccinations_smoothed  \n",
-       "0                       NaN                  NaN                        NaN  \n",
-       "1                       NaN                  NaN                        NaN  \n",
-       "2                       NaN                  NaN                        NaN  \n",
-       "3                       NaN                  NaN                        NaN  \n",
-       "4                       NaN                  NaN                        NaN  "
+       "   icu_patients_per_million  new_deaths_smoothed  new_vaccinations_smoothed  \\\n",
+       "0                       NaN                  NaN                        NaN   \n",
+       "1                       NaN                  NaN                        NaN   \n",
+       "2                       NaN                  NaN                        NaN   \n",
+       "3                       NaN                  NaN                        NaN   \n",
+       "4                       NaN                  NaN                        NaN   \n",
+       "\n",
+       "   people_fully_vaccinated_per_hundred  total_boosters_per_hundred  \\\n",
+       "0                                  NaN                         NaN   \n",
+       "1                                  NaN                         NaN   \n",
+       "2                                  NaN                         NaN   \n",
+       "3                                  NaN                         NaN   \n",
+       "4                                  NaN                         NaN   \n",
+       "\n",
+       "   new_people_vaccinated_smoothed_per_hundred  \n",
+       "0                                         NaN  \n",
+       "1                                         NaN  \n",
+       "2                                         NaN  \n",
+       "3                                         NaN  \n",
+       "4                                         NaN  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Selecting specific columns using loc() method\n",
-    "selection = df.loc[:164946,['date','location','continent','new_cases_smoothed','icu_patients','icu_patients_per_million','new_deaths_smoothed','new_vaccinations_smoothed',]]\n",
+    "selection = df.loc[:164946,['date','location','continent','new_cases_smoothed','icu_patients','icu_patients_per_million','new_deaths_smoothed','new_vaccinations_smoothed','people_fully_vaccinated_per_hundred','total_boosters_per_hundred','new_people_vaccinated_smoothed_per_hundred']]\n",
     "selection.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "date                              0\n",
-       "location                          0\n",
-       "continent                      9735\n",
-       "new_cases_smoothed             4145\n",
-       "icu_patients                 139543\n",
-       "icu_patients_per_million     139543\n",
-       "new_deaths_smoothed           20594\n",
-       "new_vaccinations_smoothed     81532\n",
+       "date                                               0\n",
+       "location                                           0\n",
+       "continent                                       9878\n",
+       "new_cases_smoothed                              4248\n",
+       "icu_patients                                  141710\n",
+       "icu_patients_per_million                      141710\n",
+       "new_deaths_smoothed                            20803\n",
+       "new_vaccinations_smoothed                      81539\n",
+       "people_fully_vaccinated_per_hundred           125166\n",
+       "total_boosters_per_hundred                    147909\n",
+       "new_people_vaccinated_smoothed_per_hundred     82784\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -464,85 +499,117 @@
        "      <th>icu_patients_per_million</th>\n",
        "      <th>new_deaths_smoothed</th>\n",
        "      <th>new_vaccinations_smoothed</th>\n",
+       "      <th>people_fully_vaccinated_per_hundred</th>\n",
+       "      <th>total_boosters_per_hundred</th>\n",
+       "      <th>new_people_vaccinated_smoothed_per_hundred</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2522</th>\n",
-       "      <td>2021-01-30</td>\n",
+       "      <th>2850</th>\n",
+       "      <td>2021-11-21</td>\n",
        "      <td>Algeria</td>\n",
        "      <td>Africa</td>\n",
-       "      <td>250.429</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>0.740</td>\n",
-       "      <td>3.857</td>\n",
-       "      <td>30.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2524</th>\n",
-       "      <td>2021-02-01</td>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>Africa</td>\n",
-       "      <td>246.286</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>0.650</td>\n",
-       "      <td>4.000</td>\n",
-       "      <td>2509.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2525</th>\n",
-       "      <td>2021-02-02</td>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>Africa</td>\n",
-       "      <td>249.143</td>\n",
+       "      <td>140.286</td>\n",
        "      <td>23.0</td>\n",
        "      <td>0.516</td>\n",
-       "      <td>3.857</td>\n",
-       "      <td>2819.0</td>\n",
+       "      <td>5.286</td>\n",
+       "      <td>79020.0</td>\n",
+       "      <td>11.88</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0.070</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2528</th>\n",
-       "      <td>2021-02-05</td>\n",
+       "      <th>2854</th>\n",
+       "      <td>2021-11-25</td>\n",
        "      <td>Algeria</td>\n",
        "      <td>Africa</td>\n",
-       "      <td>248.857</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>0.471</td>\n",
-       "      <td>3.571</td>\n",
-       "      <td>3217.0</td>\n",
+       "      <td>156.000</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>0.493</td>\n",
+       "      <td>4.571</td>\n",
+       "      <td>43565.0</td>\n",
+       "      <td>11.97</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.036</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2531</th>\n",
-       "      <td>2021-02-08</td>\n",
+       "      <th>2858</th>\n",
+       "      <td>2021-11-29</td>\n",
        "      <td>Algeria</td>\n",
        "      <td>Africa</td>\n",
-       "      <td>247.857</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>0.560</td>\n",
-       "      <td>3.429</td>\n",
-       "      <td>3748.0</td>\n",
+       "      <td>176.143</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>0.381</td>\n",
+       "      <td>5.429</td>\n",
+       "      <td>16190.0</td>\n",
+       "      <td>12.06</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6490</th>\n",
+       "      <td>2021-11-15</td>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>South America</td>\n",
+       "      <td>1298.571</td>\n",
+       "      <td>565.0</td>\n",
+       "      <td>12.389</td>\n",
+       "      <td>15.286</td>\n",
+       "      <td>356203.0</td>\n",
+       "      <td>60.26</td>\n",
+       "      <td>1.96</td>\n",
+       "      <td>0.187</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6492</th>\n",
+       "      <td>2021-11-17</td>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>South America</td>\n",
+       "      <td>1335.571</td>\n",
+       "      <td>572.0</td>\n",
+       "      <td>12.542</td>\n",
+       "      <td>18.429</td>\n",
+       "      <td>400490.0</td>\n",
+       "      <td>61.08</td>\n",
+       "      <td>2.29</td>\n",
+       "      <td>0.167</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            date location continent  new_cases_smoothed  icu_patients  \\\n",
-       "2522  2021-01-30  Algeria    Africa             250.429          33.0   \n",
-       "2524  2021-02-01  Algeria    Africa             246.286          29.0   \n",
-       "2525  2021-02-02  Algeria    Africa             249.143          23.0   \n",
-       "2528  2021-02-05  Algeria    Africa             248.857          21.0   \n",
-       "2531  2021-02-08  Algeria    Africa             247.857          25.0   \n",
+       "            date   location      continent  new_cases_smoothed  icu_patients  \\\n",
+       "2850  2021-11-21    Algeria         Africa             140.286          23.0   \n",
+       "2854  2021-11-25    Algeria         Africa             156.000          22.0   \n",
+       "2858  2021-11-29    Algeria         Africa             176.143          17.0   \n",
+       "6490  2021-11-15  Argentina  South America            1298.571         565.0   \n",
+       "6492  2021-11-17  Argentina  South America            1335.571         572.0   \n",
        "\n",
-       "      icu_patients_per_million  new_deaths_smoothed  new_vaccinations_smoothed  \n",
-       "2522                     0.740                3.857                       30.0  \n",
-       "2524                     0.650                4.000                     2509.0  \n",
-       "2525                     0.516                3.857                     2819.0  \n",
-       "2528                     0.471                3.571                     3217.0  \n",
-       "2531                     0.560                3.429                     3748.0  "
+       "      icu_patients_per_million  new_deaths_smoothed  \\\n",
+       "2850                     0.516                5.286   \n",
+       "2854                     0.493                4.571   \n",
+       "2858                     0.381                5.429   \n",
+       "6490                    12.389               15.286   \n",
+       "6492                    12.542               18.429   \n",
+       "\n",
+       "      new_vaccinations_smoothed  people_fully_vaccinated_per_hundred  \\\n",
+       "2850                    79020.0                                11.88   \n",
+       "2854                    43565.0                                11.97   \n",
+       "2858                    16190.0                                12.06   \n",
+       "6490                   356203.0                                60.26   \n",
+       "6492                   400490.0                                61.08   \n",
+       "\n",
+       "      total_boosters_per_hundred  new_people_vaccinated_smoothed_per_hundred  \n",
+       "2850                        0.03                                       0.070  \n",
+       "2854                        0.05                                       0.036  \n",
+       "2858                        0.06                                       0.012  \n",
+       "6490                        1.96                                       0.187  \n",
+       "6492                        2.29                                       0.167  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -562,20 +629,23 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 13856 entries, 2522 to 154244\n",
-      "Data columns (total 8 columns):\n",
-      " #   Column                     Non-Null Count  Dtype  \n",
-      "---  ------                     --------------  -----  \n",
-      " 0   date                       13856 non-null  object \n",
-      " 1   location                   13856 non-null  object \n",
-      " 2   continent                  13856 non-null  object \n",
-      " 3   new_cases_smoothed         13856 non-null  float64\n",
-      " 4   icu_patients               13856 non-null  float64\n",
-      " 5   icu_patients_per_million   13856 non-null  float64\n",
-      " 6   new_deaths_smoothed        13856 non-null  float64\n",
-      " 7   new_vaccinations_smoothed  13856 non-null  float64\n",
-      "dtypes: float64(5), object(3)\n",
-      "memory usage: 974.2+ KB\n"
+      "Int64Index: 5863 entries, 2850 to 156684\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column                                      Non-Null Count  Dtype  \n",
+      "---  ------                                      --------------  -----  \n",
+      " 0   date                                        5863 non-null   object \n",
+      " 1   location                                    5863 non-null   object \n",
+      " 2   continent                                   5863 non-null   object \n",
+      " 3   new_cases_smoothed                          5863 non-null   float64\n",
+      " 4   icu_patients                                5863 non-null   float64\n",
+      " 5   icu_patients_per_million                    5863 non-null   float64\n",
+      " 6   new_deaths_smoothed                         5863 non-null   float64\n",
+      " 7   new_vaccinations_smoothed                   5863 non-null   float64\n",
+      " 8   people_fully_vaccinated_per_hundred         5863 non-null   float64\n",
+      " 9   total_boosters_per_hundred                  5863 non-null   float64\n",
+      " 10  new_people_vaccinated_smoothed_per_hundred  5863 non-null   float64\n",
+      "dtypes: float64(8), object(3)\n",
+      "memory usage: 549.7+ KB\n"
      ]
     }
    ],
@@ -586,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +692,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.11"
   },
   "orig_nbformat": 4
  },
