--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "[5 rows x 67 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -287,6 +287,9 @@
        "      <th>people_fully_vaccinated_per_hundred</th>\n",
        "      <th>total_boosters_per_hundred</th>\n",
        "      <th>new_people_vaccinated_smoothed_per_hundred</th>\n",
+       "      <th>people_fully_vaccinated</th>\n",
+       "      <th>total_boosters</th>\n",
+       "      <th>new_vaccinations</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -295,6 +298,9 @@
        "      <td>2020-02-24</td>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>Asia</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -317,12 +323,18 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2020-02-26</td>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>Asia</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -345,12 +357,18 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2020-02-28</td>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>Asia</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -386,28 +404,35 @@
        "3                                  NaN                         NaN   \n",
        "4                                  NaN                         NaN   \n",
        "\n",
-       "   new_people_vaccinated_smoothed_per_hundred  \n",
-       "0                                         NaN  \n",
-       "1                                         NaN  \n",
-       "2                                         NaN  \n",
-       "3                                         NaN  \n",
-       "4                                         NaN  "
+       "   new_people_vaccinated_smoothed_per_hundred  people_fully_vaccinated  \\\n",
+       "0                                         NaN                      NaN   \n",
+       "1                                         NaN                      NaN   \n",
+       "2                                         NaN                      NaN   \n",
+       "3                                         NaN                      NaN   \n",
+       "4                                         NaN                      NaN   \n",
+       "\n",
+       "   total_boosters  new_vaccinations  \n",
+       "0             NaN               NaN  \n",
+       "1             NaN               NaN  \n",
+       "2             NaN               NaN  \n",
+       "3             NaN               NaN  \n",
+       "4             NaN               NaN  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Selecting specific columns using loc() method\n",
-    "selection = df.loc[:164946,['date','location','continent','new_cases_smoothed','icu_patients','icu_patients_per_million','new_deaths_smoothed','new_vaccinations_smoothed','people_fully_vaccinated_per_hundred','total_boosters_per_hundred','new_people_vaccinated_smoothed_per_hundred']]\n",
+    "selection = df.loc[:164946,['date','location','continent','new_cases_smoothed','icu_patients','icu_patients_per_million','new_deaths_smoothed','new_vaccinations_smoothed','people_fully_vaccinated_per_hundred','total_boosters_per_hundred','new_people_vaccinated_smoothed_per_hundred','people_fully_vaccinated','total_boosters','new_vaccinations']]\n",
     "selection.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -424,10 +449,13 @@
        "people_fully_vaccinated_per_hundred           125166\n",
        "total_boosters_per_hundred                    147909\n",
        "new_people_vaccinated_smoothed_per_hundred     82784\n",
+       "people_fully_vaccinated                       125166\n",
+       "total_boosters                                147909\n",
+       "new_vaccinations                              128020\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -502,51 +530,12 @@
        "      <th>people_fully_vaccinated_per_hundred</th>\n",
        "      <th>total_boosters_per_hundred</th>\n",
        "      <th>new_people_vaccinated_smoothed_per_hundred</th>\n",
+       "      <th>people_fully_vaccinated</th>\n",
+       "      <th>total_boosters</th>\n",
+       "      <th>new_vaccinations</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2850</th>\n",
-       "      <td>2021-11-21</td>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>Africa</td>\n",
-       "      <td>140.286</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>0.516</td>\n",
-       "      <td>5.286</td>\n",
-       "      <td>79020.0</td>\n",
-       "      <td>11.88</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.070</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2854</th>\n",
-       "      <td>2021-11-25</td>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>Africa</td>\n",
-       "      <td>156.000</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>0.493</td>\n",
-       "      <td>4.571</td>\n",
-       "      <td>43565.0</td>\n",
-       "      <td>11.97</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.036</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2858</th>\n",
-       "      <td>2021-11-29</td>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>Africa</td>\n",
-       "      <td>176.143</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>0.381</td>\n",
-       "      <td>5.429</td>\n",
-       "      <td>16190.0</td>\n",
-       "      <td>12.06</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>0.012</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>6490</th>\n",
        "      <td>2021-11-15</td>\n",
@@ -560,20 +549,77 @@
        "      <td>60.26</td>\n",
        "      <td>1.96</td>\n",
        "      <td>0.187</td>\n",
+       "      <td>27479827.0</td>\n",
+       "      <td>892457.0</td>\n",
+       "      <td>1297018.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6492</th>\n",
-       "      <td>2021-11-17</td>\n",
+       "      <th>6495</th>\n",
+       "      <td>2021-11-20</td>\n",
        "      <td>Argentina</td>\n",
        "      <td>South America</td>\n",
-       "      <td>1335.571</td>\n",
+       "      <td>1364.429</td>\n",
        "      <td>572.0</td>\n",
        "      <td>12.542</td>\n",
-       "      <td>18.429</td>\n",
-       "      <td>400490.0</td>\n",
-       "      <td>61.08</td>\n",
-       "      <td>2.29</td>\n",
-       "      <td>0.167</td>\n",
+       "      <td>20.857</td>\n",
+       "      <td>440583.0</td>\n",
+       "      <td>62.23</td>\n",
+       "      <td>2.77</td>\n",
+       "      <td>0.122</td>\n",
+       "      <td>28379784.0</td>\n",
+       "      <td>1263315.0</td>\n",
+       "      <td>214081.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6496</th>\n",
+       "      <td>2021-11-21</td>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>South America</td>\n",
+       "      <td>1372.286</td>\n",
+       "      <td>561.0</td>\n",
+       "      <td>12.301</td>\n",
+       "      <td>20.714</td>\n",
+       "      <td>425164.0</td>\n",
+       "      <td>62.36</td>\n",
+       "      <td>2.84</td>\n",
+       "      <td>0.103</td>\n",
+       "      <td>28439413.0</td>\n",
+       "      <td>1294189.0</td>\n",
+       "      <td>114402.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6497</th>\n",
+       "      <td>2021-11-22</td>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>South America</td>\n",
+       "      <td>1261.429</td>\n",
+       "      <td>566.0</td>\n",
+       "      <td>12.411</td>\n",
+       "      <td>18.857</td>\n",
+       "      <td>258749.0</td>\n",
+       "      <td>62.50</td>\n",
+       "      <td>2.91</td>\n",
+       "      <td>0.108</td>\n",
+       "      <td>28505739.0</td>\n",
+       "      <td>1327224.0</td>\n",
+       "      <td>132111.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6498</th>\n",
+       "      <td>2021-11-23</td>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>South America</td>\n",
+       "      <td>1264.571</td>\n",
+       "      <td>570.0</td>\n",
+       "      <td>12.498</td>\n",
+       "      <td>17.286</td>\n",
+       "      <td>255271.0</td>\n",
+       "      <td>62.81</td>\n",
+       "      <td>3.11</td>\n",
+       "      <td>0.110</td>\n",
+       "      <td>28645100.0</td>\n",
+       "      <td>1420213.0</td>\n",
+       "      <td>300974.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -581,35 +627,42 @@
       ],
       "text/plain": [
        "            date   location      continent  new_cases_smoothed  icu_patients  \\\n",
-       "2850  2021-11-21    Algeria         Africa             140.286          23.0   \n",
-       "2854  2021-11-25    Algeria         Africa             156.000          22.0   \n",
-       "2858  2021-11-29    Algeria         Africa             176.143          17.0   \n",
        "6490  2021-11-15  Argentina  South America            1298.571         565.0   \n",
-       "6492  2021-11-17  Argentina  South America            1335.571         572.0   \n",
+       "6495  2021-11-20  Argentina  South America            1364.429         572.0   \n",
+       "6496  2021-11-21  Argentina  South America            1372.286         561.0   \n",
+       "6497  2021-11-22  Argentina  South America            1261.429         566.0   \n",
+       "6498  2021-11-23  Argentina  South America            1264.571         570.0   \n",
        "\n",
        "      icu_patients_per_million  new_deaths_smoothed  \\\n",
-       "2850                     0.516                5.286   \n",
-       "2854                     0.493                4.571   \n",
-       "2858                     0.381                5.429   \n",
        "6490                    12.389               15.286   \n",
-       "6492                    12.542               18.429   \n",
+       "6495                    12.542               20.857   \n",
+       "6496                    12.301               20.714   \n",
+       "6497                    12.411               18.857   \n",
+       "6498                    12.498               17.286   \n",
        "\n",
        "      new_vaccinations_smoothed  people_fully_vaccinated_per_hundred  \\\n",
-       "2850                    79020.0                                11.88   \n",
-       "2854                    43565.0                                11.97   \n",
-       "2858                    16190.0                                12.06   \n",
        "6490                   356203.0                                60.26   \n",
-       "6492                   400490.0                                61.08   \n",
+       "6495                   440583.0                                62.23   \n",
+       "6496                   425164.0                                62.36   \n",
+       "6497                   258749.0                                62.50   \n",
+       "6498                   255271.0                                62.81   \n",
        "\n",
-       "      total_boosters_per_hundred  new_people_vaccinated_smoothed_per_hundred  \n",
-       "2850                        0.03                                       0.070  \n",
-       "2854                        0.05                                       0.036  \n",
-       "2858                        0.06                                       0.012  \n",
-       "6490                        1.96                                       0.187  \n",
-       "6492                        2.29                                       0.167  "
+       "      total_boosters_per_hundred  new_people_vaccinated_smoothed_per_hundred  \\\n",
+       "6490                        1.96                                       0.187   \n",
+       "6495                        2.77                                       0.122   \n",
+       "6496                        2.84                                       0.103   \n",
+       "6497                        2.91                                       0.108   \n",
+       "6498                        3.11                                       0.110   \n",
+       "\n",
+       "      people_fully_vaccinated  total_boosters  new_vaccinations  \n",
+       "6490               27479827.0        892457.0         1297018.0  \n",
+       "6495               28379784.0       1263315.0          214081.0  \n",
+       "6496               28439413.0       1294189.0          114402.0  \n",
+       "6497               28505739.0       1327224.0          132111.0  \n",
+       "6498               28645100.0       1420213.0          300974.0  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -629,23 +682,26 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 5863 entries, 2850 to 156684\n",
-      "Data columns (total 11 columns):\n",
+      "Int64Index: 5539 entries, 6490 to 156684\n",
+      "Data columns (total 14 columns):\n",
       " #   Column                                      Non-Null Count  Dtype  \n",
       "---  ------                                      --------------  -----  \n",
-      " 0   date                                        5863 non-null   object \n",
-      " 1   location                                    5863 non-null   object \n",
-      " 2   continent                                   5863 non-null   object \n",
-      " 3   new_cases_smoothed                          5863 non-null   float64\n",
-      " 4   icu_patients                                5863 non-null   float64\n",
-      " 5   icu_patients_per_million                    5863 non-null   float64\n",
-      " 6   new_deaths_smoothed                         5863 non-null   float64\n",
-      " 7   new_vaccinations_smoothed                   5863 non-null   float64\n",
-      " 8   people_fully_vaccinated_per_hundred         5863 non-null   float64\n",
-      " 9   total_boosters_per_hundred                  5863 non-null   float64\n",
-      " 10  new_people_vaccinated_smoothed_per_hundred  5863 non-null   float64\n",
-      "dtypes: float64(8), object(3)\n",
-      "memory usage: 549.7+ KB\n"
+      " 0   date                                        5539 non-null   object \n",
+      " 1   location                                    5539 non-null   object \n",
+      " 2   continent                                   5539 non-null   object \n",
+      " 3   new_cases_smoothed                          5539 non-null   float64\n",
+      " 4   icu_patients                                5539 non-null   float64\n",
+      " 5   icu_patients_per_million                    5539 non-null   float64\n",
+      " 6   new_deaths_smoothed                         5539 non-null   float64\n",
+      " 7   new_vaccinations_smoothed                   5539 non-null   float64\n",
+      " 8   people_fully_vaccinated_per_hundred         5539 non-null   float64\n",
+      " 9   total_boosters_per_hundred                  5539 non-null   float64\n",
+      " 10  new_people_vaccinated_smoothed_per_hundred  5539 non-null   float64\n",
+      " 11  people_fully_vaccinated                     5539 non-null   float64\n",
+      " 12  total_boosters                              5539 non-null   float64\n",
+      " 13  new_vaccinations                            5539 non-null   float64\n",
+      "dtypes: float64(11), object(3)\n",
+      "memory usage: 649.1+ KB\n"
      ]
     }
    ],
@@ -656,7 +712,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +755,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
